<resources>
    <string name="app_name">TNUV_app</string>
    <string name="profile">profile</string>

    <string name="workout">start workout</string>
    <string name="list">list</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_workout_details">WorkoutDetails</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="your_name">Gregor Samsa</string>
    <string name="imeLabel">Ime in priimek</string>
    <string name="spol">Spol</string>
    <string name="cal">Koliko kalorij na dan želiš porabiti (kcal)</string>
    <string name="cals">300</string>
    <string name="cas">Koliko časa na dan želiš trenirati (min)</string>
    <string name="casHint">40</string>
    <string name="teza">Teža (kg)</string>
    <string name="tezahint">77</string>
    <string name="vis">Višina (cm)</string>
    <string name="visinahint">182</string>
    <string name="tag">"Veseli nas, da ste naredili prvi korak k boljšemu zdravju. Izpolnite spodnje podatke in začnite svojo fitnes potovanje!"</string>
</resources>