<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Login"
    android:background="@color/bcg"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/subtitle"
            android:layout_marginBottom="20dp"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:text="Pozdravljeni!"
            android:layout_marginTop="40dp"
            android:id="@+id/loginTitle">
        </TextView>
        <TextView
            app:layout_constraintTop_toBottomOf="@+id/loginTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tag"
            android:layout_marginBottom="50dp"
            android:paddingEnd="40dp"
            android:paddingStart="40dp"
            android:gravity="center_horizontal"
            android:textColor="@color/white">
        </TextView>

    </androidx.constraintlayout.widget.ConstraintLayout>






<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/imeLabel"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="6dp"
        android:textColor="@color/white"
        >
    </TextView>


    <EditText
        android:id="@+id/imePrii"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/login_cards"
        android:hint="@string/your_name"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:textColorHint="@color/proba"
        android:textSize="15sp"
        android:textColor="@color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/teza"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="6dp"
        android:textColor="@color/white"
        >
    </TextView>
    <EditText
        android:id="@+id/teza2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/tezahint"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="15dp"
        android:padding="15dp"
        android:inputType="number"
        android:background="@drawable/login_cards"
        android:textSize="15sp"
        android:textColorHint="@color/proba"
        android:textColor="@color/white">
    </EditText>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vis"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="6dp"
        android:textColor="@color/white"
        >
    </TextView>
    <EditText
        android:id="@+id/visina2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/visinahint"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="15dp"
        android:padding="15dp"
        android:inputType="number"
        android:background="@drawable/login_cards"
        android:textSize="15sp"
        android:textColorHint="@color/proba"
        android:textColor="@color/white"/>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spol"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="6dp"
        android:textColor="@color/white"
        >
    </TextView>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        android:id="@+id/spinner"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="6dp"
        android:background="@android:drawable/btn_dropdown"
        android:backgroundTint="@color/theDarkest"
        android:textColor="@color/white">
    </Spinner>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cal"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="6dp"
        android:textColor="@color/white"
        >
    </TextView>
    <EditText
        android:id="@+id/calInput"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/cals"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="15dp"
        android:padding="15dp"
        android:inputType="number"
        android:background="@drawable/login_cards"
        android:textSize="15sp"
        android:textColorHint="@color/proba"
        android:textColor="@color/white"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cas"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="6dp"
        android:textColor="@color/white"
        >
    </TextView>
    <EditText
        android:id="@+id/cas2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/casHint"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="15dp"
        android:padding="15dp"
        android:inputType="number"
        android:background="@drawable/login_cards"
        android:textSize="15sp"
        android:textColorHint="@color/proba"
        android:textColor="@color/white"/>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto">


        <com.google.android.material.button.MaterialButton
            app:cornerRadius="25dp"
            android:layout_width="100dp"
            android:layout_height="70dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toTopOf="parent"
            android:text="Vpis"
            android:backgroundTint="@color/pinky"
            android:id="@+id/vpisBtn"
            android:gravity="center"
            app:elevation="0dp"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:layout_marginBottom="20dp"

            />

    </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</ScrollView>




<!--    <RelativeLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="0dp"-->
<!--        android:layout_weight="1">-->

<!--        <Button-->
<!--            android:id="@+id/btn_register"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:background="@drawable/btn_custom"-->
<!--            android:fontFamily="@font/roboto_regular"-->
<!--            android:layout_marginLeft="20dp"-->
<!--            android:layout_marginRight="20dp"-->
<!--            android:layout_marginBottom="30dp"-->
<!--            android:layout_centerInParent="true"-->
<!--            android:textColor="@android:color/white"-->
<!--            android:text="@string/register"/>-->

<!--        <ImageView-->
<!--            android:layout_width="30dp"-->
<!--            android:layout_height="30dp"-->
<!--            android:src="@drawable/ic_arrow_left"-->
<!--            android:layout_above="@id/swipeLeft"-->
<!--            android:layout_centerHorizontal="true"/>-->

<!--        <TextView-->
<!--            android:id="@+id/swipeLeft"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/swipe_right_for_login"-->
<!--            android:textSize="15sp"-->
<!--            android:fontFamily="@font/roboto_regular"-->
<!--            android:layout_centerHorizontal="true"-->
<!--            android:layout_alignParentBottom="true"-->
<!--            android:layout_marginBottom="20dp"/>-->

<!--    </RelativeLayout>-->

</LinearLayout>